productionise-using-sidecars/manifests/initial/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
    release: gophercon
    version: initial
spec:
  selector:
    app: frontend
    release: gophercon
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4200
