productionise-using-sidecars/manifests/initial/frontend/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  labels:
    version: initial
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend-service
          servicePort: 80
